# NJOY21

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  ReleaseNotes.md  _config.yml  azure-pipelines.yml  buildspec.yml  cmake.py  compiler_configuration.py  description.py  fetch_subprojects.py  generate.py  index.md  signature.py
.github/: ContinuousIntegration.yml
.github/workflows/: ContinuousIntegration.yml
.travis/: build.sh
_site/: LICENSE.html  README-jekyll.html  index.html
cmake/: CTestCustom.cmake  NJOY21_dependencies.cmake  develop_dependencies.cmake  live_dependencies.cmake  local_dependencies.cmake  release_dependencies.cmake  signature_dependencies.cmake  unit_testing.cmake
docs/: README-jekyll.md  Updating.md  index.md
metaconfigure/: README.md  cmake.py  collect_subprojects.py  configuration.py  description.json  description.py  fetch_subprojects.py  generate.py  signature.py
metaconfigure/docs/: Updating.md
src/: main.cpp  njoy21.hpp
src/njoy21/: CommandLine.hpp  Driver.hpp  Sequence.hpp  Signature.hpp  Signature.hpp.in  Version.hpp  banner.hpp  input.hpp  interface.hpp  io.hpp  legacy.hpp  modern.hpp
src/njoy21/CommandLine/test/: CMakeLists.txt  CommandLine.test.cpp
src/njoy21/Driver/test/: CMakeLists.txt  Driver.test.cpp
src/njoy21/Driver/test/resources/: input.njoy
src/njoy21/Version/test/: CMakeLists.txt  Version.test.cpp
src/njoy21/input/ACER/Card4/Izaw/test/: CMakeLists.txt  Izaw.test.cpp
src/njoy21/input/ACER/Card7/Thin3/test/: CMakeLists.txt  Thin3.test.cpp
src/njoy21/input/ACER/Card9/Mte/test/: CMakeLists.txt  Mte.test.cpp
src/njoy21/input/ACER/Card9/Mti/test/: CMakeLists.txt  Mti.test.cpp
src/njoy21/input/ACER/Card9/Nmix/test/: CMakeLists.txt  Nmix.test.cpp
src/njoy21/input/COVR/Card3a/Nstart/test/: CMakeLists.txt  Nstart.test.cpp
src/njoy21/input/ERRORR/Normal/Card3/Tempin/test/: CMakeLists.txt  Tempin.test.cpp
src/njoy21/input/Label/test/: CMakeLists.txt  Label.test.cpp
src/njoy21/input/MIXR/Card5/Awr/test/: Awr.test.cpp  CMakeLists.txt
src/njoy21/input/MODER/Card2/Tapeid/test/: CMakeLists.txt  Tapeid.test.cpp
src/njoy21/input/PLOTR/Card9/Ithick/test/: CMakeLists.txt  Ithick.test.cpp
src/njoy21/input/PURR/Card4/test/: CMakeLists.txt  Card4.test.cpp
src/njoy21/input/RECONR/Card3/Mat/test/: CMakeLists.txt  Mat.test.cpp
src/njoy21/input/RECONR/Card3/Ngrid/test/: CMakeLists.txt  Ngrid.test.cpp
src/njoy21/input/THERMR/Card2/Iform/test/: CMakeLists.txt  Iform.test.cpp
src/njoy21/input/THERMR/Card2/Matde/test/: CMakeLists.txt  Matde.test.cpp
src/njoy21/input/WIMSR/Card4/Sgref/test/: CMakeLists.txt  Sgref.test.cpp
src/njoy21/input/argument/Type/test/: CMakeLists.txt  Type.test.cpp
src/njoy21/input/argument/parser/test/: Base.test.cpp  CMakeLists.txt  Defaulted.test.cpp  Discriminating.test.cpp  Optional.test.cpp  Required.test.cpp
src/njoy21/io/Manager/test/: CMakeLists.txt  Manager.test.cpp
src/njoy21/io/Manager/test/resources/: referenceOutput
src/njoy21/legacy/Sequence/test/: CMakeLists.txt  Sequence.test.cpp
test/: CMakeLists.txt  execute.py
test/01/: CMakeLists.txt  tape20
test/02/: CMakeLists.txt  input
test/03/: CMakeLists.txt  input
test/04/: CMakeLists.txt  input
test/05/: CMakeLists.txt  input
test/06/: CMakeLists.txt  input
test/07/: CMakeLists.txt  input
test/08/: CMakeLists.txt
test/09/: CMakeLists.txt
test/10/: CMakeLists.txt
test/11/: CMakeLists.txt
test/12/: CMakeLists.txt
test/13/: CMakeLists.txt
test/14/: CMakeLists.txt
test/15/: CMakeLists.txt
test/16/: CMakeLists.txt
test/17/: CMakeLists.txt
test/18/: CMakeLists.txt  input
test/19/: CMakeLists.txt
test/20/: CMakeLists.txt
test/21/: CMakeLists.txt
test/22/: CMakeLists.txt
test/23/: CMakeLists.txt
test/24/: CMakeLists.txt
test/25/: CMakeLists.txt
test/26/: CMakeLists.txt
test/27/: CMakeLists.txt
test/28/: CMakeLists.txt
test/29/: CMakeLists.txt  input
test/30/: CMakeLists.txt
test/31/: CMakeLists.txt
test/32/: CMakeLists.txt
test/33/: CMakeLists.txt
tests/: CMakeLists.txt  execute.py
tests/01/: input
tests/02/: input
tests/04/: input
tests/07/: input
tests/08/: CMakeLists.txt  input  referenceTape25  referenceTape28
tests/09/: input
tests/10/: input
tests/11/: input
tests/12/: referenceTape22  referenceTape24
tests/13/: input  referenceTape26  referenceTape28  referenceTape36
tests/15/: input  referenceTape25  referenceTape26  referenceTape27  referenceTape36  referenceTape37  referenceTape46  referenceTape47  referenceTape91
tests/16/: input  referenceTape26  referenceTape27  referenceTape36  referenceTape46
tests/17/: referenceTape26  referenceTape91  referenceTape92  referenceTape93  referenceTape99
tests/18/: input  referenceTape91
tests/19/: input  referenceTape27  referenceTape29
tests/20/: referenceTape23  referenceTape27
tests/23/: CMakeLists.txt
tests/24/: CMakeLists.txt  input  tape20
tests/25/: input  referenceTape70  referenceTape71
tests/26/: input  referenceTape40
tests/27/: input
tests/28/: input  referenceTape34  referenceTape44  referenceTape54
tests/29/: CMakeLists.txt  input  referenceTape45  referenceTape55
tests/30/: CMakeLists.txt  input  referenceTape44  referenceTape45  tape20
tests/31/: CMakeLists.txt  diff.txt  input  output  tape20
tests/32/: CMakeLists.txt  input  tape20
tests/33/: CMakeLists.txt  tape20
tests/34/: input
tests/35/: input
tests/36/: input  referenceTape34  referenceTape44
tests/37/: input  referenceTape34
tests/38/: input  referenceTape34  referenceTape44
tests/39/: input  referenceTape34  referenceTape44
tests/40/: input  referenceTape34
tests/41/: input  referenceTape34
tests/42/: input
tests/43/: input  referenceTape35
tests/44/: input  referenceTape35
tests/45/: input
tests/46/: input  referenceTape34
tests/47/: input  referenceTape45  referenceTape55  referenceTape58
tests/49/: input
tests/50/: referenceTape34
tests/51/: referenceTape34
tests/54/: referenceTape34
tests/55/: input
tests/60/: input  (+1 more)
(+2550 files in other folders)
