add_executable( njoy21.io.Manager.test Manager.test.cpp )
set( test_flags ${njoy21_compiler_flags} )
separate_arguments( test_flags_list UNIX_COMMAND "${test_flags}" )
foreach( flag IN LISTS test_flags_list )
    target_compile_options( njoy21.io.Manager.test PUBLIC ${flag} )
endforeach( flag )
set_target_properties( njoy21.io.Manager.test PROPERTIES LINK_FLAGS "${test_flags}" )
target_link_libraries( njoy21.io.Manager.test PUBLIC njoy21 )
file( GLOB resources "resources/*" ) 
foreach( resource ${resources} )
    file( COPY "${resource}" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}" ) 
endforeach( resource )
add_test( NAME njoy21.io.Manager COMMAND njoy21.io.Manager.test ) 
