add_executable( njoy21.legacy.Sequence.test Sequence.test.cpp )
set( test_flags ${njoy21_compiler_flags} )
separate_arguments( test_flags_list UNIX_COMMAND "${test_flags}" )
foreach( flag IN LISTS test_flags_list )
    target_compile_options( njoy21.legacy.Sequence.test PUBLIC ${flag} )
endforeach( flag )
set_target_properties( njoy21.legacy.Sequence.test PROPERTIES LINK_FLAGS "${test_flags}" )
target_link_libraries( njoy21.legacy.Sequence.test PUBLIC njoy21 )
add_test( NAME njoy21.legacy.Sequence COMMAND njoy21.legacy.Sequence.test ) 
