add_executable( njoy21.input.RECONR.Card3.Mat.test Mat.test.cpp )
set( test_flags ${njoy21_compiler_flags} )
separate_arguments( test_flags_list UNIX_COMMAND "${test_flags}" )
foreach( flag IN LISTS test_flags_list )
    target_compile_options( njoy21.input.RECONR.Card3.Mat.test PUBLIC ${flag} )
endforeach( flag )
set_target_properties( njoy21.input.RECONR.Card3.Mat.test PROPERTIES LINK_FLAGS "${test_flags}" )
target_link_libraries( njoy21.input.RECONR.Card3.Mat.test PUBLIC njoy21 )
add_test( NAME njoy21.input.RECONR.Card3.Mat COMMAND njoy21.input.RECONR.Card3.Mat.test ) 
